# Render_estimation

./: .ammanrc.js  .gitignore  Anchor.toml  Cargo.toml  README.md  geyser-plugin-config.json  package.json  tsconfig.json  tsconfig.root.json
bridge/: README.md  next.config.js  package.json  tsconfig.json
bridge/src/: utils.ts
bridge/src/pages/: _app.tsx  index.tsx
bridge/src/pages/api/: transfer.ts
bridge/src/styles/: globals.css
hardhat2work/: coverage.json  hardhat.config.ts  package.json
hardhat2work/artifacts/contracts/BurnMilkToken.sol/: BurnMilkToken.json
hardhat2work/artifacts/contracts/MilkToken.sol/: MilkToken.json
hardhat2work/artifacts/hardhat/console.sol/: console.dbg.json
hardhat2work/cache/: solidity-files-cache.json  validations.json
hardhat2work/contracts/: BurnMilkToken.sol  MilkToken.sol
hardhat2work/coverage/: coverage-final.json  index.html  lcov.info
hardhat2work/coverage/contracts/: BurnMilkToken.sol.html
hardhat2work/coverage/lcov-report/contracts/: MilkToken.sol.html  index.html
hardhat2work/scripts/: deploy.ts  mint.ts
hardhat2work/tests/: emission-schedule.ts
hardhat2work/tests/clockwork/: emission-distributor.ts
hardhat2work/typechain-types/: hardhat.d.ts  index.ts
hardhat2work/typechain-types/contracts/: BurnMilkToken.ts  MilkToken.ts  index.ts
hardhat2work/typechain-types/factories/contracts/: BurnMilkToken__factory.ts  MilkToken__factory.ts  index.ts
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs  state.rs
programs/bridge/src/instructions/: bridge_mint_rndr_v0.rs  initialize_bridge_v0.rs  mod.rs
programs/burn-rewards/: Cargo.toml
programs/burn-rewards/src/: errors.rs  lib.rs  state.rs
programs/burn-rewards/src/instructions/: distribute_burn_rewards_v0.rs  initialize_burn_rewards_v0.rs  mod.rs
programs/circuit-breaker/: Cargo.toml
programs/circuit-breaker/src/: errors.rs  lib.rs  state.rs  window.rs
programs/circuit-breaker/src/instructions/: initialize_account_windowed_breaker_v0.rs  initialize_mint_windowed_breaker_v0.rs  mint_v0.rs  transfer_v0.rs  update_account_windowed_breaker_v0.rs  (+1 more)
programs/emission-distributor/: Cargo.toml
programs/emission-distributor/src/: errors.rs  lib.rs  state.rs
programs/emission-distributor/src/instructions/: distribute_emission_v0.rs  initialize_emission_distributor_v0.rs  mod.rs  update_emission_distributor_v0.rs
programs/emission-schedule/: Cargo.toml
programs/emission-schedule/src/: lib.rs  state.rs
programs/price-oracle/src/: error.rs  lib.rs  state.rs  utils.rs
programs/render-credits/: Cargo.toml
programs/render-credits/src/: circuit_breaker.rs  errors.rs  lib.rs  state.rs
programs/render-credits/src/instructions/: burn_render_credits_v0.rs  initialize_render_credits_v0.rs  mint_render_credits_v0.rs  mod.rs  update_render_credits_v0.rs
programs/shared-utils/: Cargo.toml
programs/shared-utils/src/: compressed_nfts.rs  error.rs  precise_number.rs  signed_precise_number.rs  token_metadata.rs
scripts/: clockwork-validator.sh  init-idls.sh  upgrade-idls.sh
tests/: bridge.ts  circuit-breaker.ts  render-credits.ts
tests/utils/: fixtures.ts
(+11 files in other folders)
