[workspace]
members = [
    "programs/*"
]
exclude = [
    "deps/metaplex-program-library/bubblegum/program",
    "deps/metaplex-program-library/token-metadata/program",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
toml_datetime = { git = "https://github.com/toml-rs/toml.git", package= "toml_datetime", tag="toml_datetime-v0.6.0" }
toml_edit = { git = "https://github.com/toml-rs/toml.git", package= "toml_edit", tag="v0.19.0" }
