[package]
name = "emission-distributor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "emission_distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
#clockwork-sdk = { version = "~2.0.1" }
clockwork-sdk = { git = "https://github.com/clockwork-xyz/clockwork", version="2.0.1", rev="781b42fd06f2926899597ce5ea1f19b8ecd3d2e4" }
#clockwork-thread-program = {path = "../../deps/clockwork/programs/thread"}
circuit-breaker = { path = "../circuit-breaker", features = ["cpi"] }
emission-schedule = { path = "../emission-schedule", features = ["cpi"] }
shared-utils = { path = "../shared-utils" }
